--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -2278,7 +2278,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "8d0f1bfc",
+   "id": "99eba9f2",
    "metadata": {},
    "outputs": [
     {
@@ -2301,7 +2301,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "67f5a47c",
+   "id": "4309dbcf",
    "metadata": {},
    "outputs": [
     {
@@ -2328,7 +2328,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "26cabdec",
+   "id": "fa770ac5",
    "metadata": {},
    "outputs": [
     {
@@ -2355,7 +2355,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "9451741c",
+   "id": "8fe89447",
    "metadata": {},
    "outputs": [
     {
@@ -2378,7 +2378,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "6d5c1eb9",
+   "id": "0f8cdfb7",
    "metadata": {},
    "outputs": [
     {
@@ -2415,7 +2415,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "e487894e",
+   "id": "387caa43",
    "metadata": {},
    "outputs": [
     {
@@ -2436,7 +2436,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "7dc29f87",
+   "id": "48ff3973",
    "metadata": {},
    "outputs": [
     {
@@ -2463,7 +2463,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "8605ad07",
+   "id": "c7ed55d4",
    "metadata": {},
    "outputs": [
     {
@@ -2497,8 +2497,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "id": "a7f53f4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver_percents = 100 * city_data_df.groupby([\"type\"]).sum()[\"driver_count\"] / city_data_df[\"driver_count\"].sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b8bb56a1",
+   "id": "09861cd9",
    "metadata": {},
    "outputs": [],
    "source": []
